@@ -1,6 +1,7 @@
 ﻿using System;
 using System.Drawing;
 using System.Windows.Forms;
+using Nikse.SubtitleEdit.Logic;
 
 namespace Nikse.SubtitleEdit.Forms
 {
@@ -16,6 +17,8 @@ namespace Nikse.SubtitleEdit.Forms
             _bmp = bmp;
             _factor = factor;
             numericUpDown1.Value = (decimal)factor;
+
+            saveImageAsToolStripMenuItem.Text = Configuration.Settings.Language.VobSubOcr.SaveSubtitleImageAs;
         }
 
         private void numericUpDown1_ValueChanged(object sender, EventArgs e)
@@ -43,6 +46,43 @@ namespace Nikse.SubtitleEdit.Forms
         {
             if (e.KeyCode == Keys.Escape)
                 DialogResult = DialogResult.Cancel;
+        }
+
+        private void saveImageAsToolStripMenuItem_Click(object sender, EventArgs e)
+        {
+            saveFileDialog1.Title = Configuration.Settings.Language.VobSubOcr.SaveSubtitleImageAs;
+            saveFileDialog1.AddExtension = true;
+            saveFileDialog1.FileName = "ImageUnItalic";
+            saveFileDialog1.Filter = "PNG image|*.png|BMP image|*.bmp|GIF image|*.gif|TIFF image|*.tiff";
+            saveFileDialog1.FilterIndex = 0;
+
+            DialogResult result = saveFileDialog1.ShowDialog(this);
+            if (result == DialogResult.OK)
+            {
+                Bitmap bmp = (Bitmap) pictureBoxSubtitleImage.Image;
+                if (bmp == null)
+                {
+                    MessageBox.Show("No image!");
+                    return;
+                }
+
+                try
+                {
+                    if (saveFileDialog1.FilterIndex == 0)
+                        bmp.Save(saveFileDialog1.FileName, System.Drawing.Imaging.ImageFormat.Png);
+                    else if (saveFileDialog1.FilterIndex == 1)
+                        bmp.Save(saveFileDialog1.FileName);
+                    else if (saveFileDialog1.FilterIndex == 2)
+                        bmp.Save(saveFileDialog1.FileName, System.Drawing.Imaging.ImageFormat.Gif);
+                    else
+                        bmp.Save(saveFileDialog1.FileName, System.Drawing.Imaging.ImageFormat.Tiff);
+                }
+                catch (Exception exception)
+                {
+                    MessageBox.Show(exception.Message);
+                }
+            }
+
         }
     }
 }
