@@ -13,8 +13,9 @@
    * Updated Czech language file - thx Trottel
    * Updated German language file - thx Christoph Kitsche
 * FIXED:
-   * Possible crash in 'Fix common errors' on selected lines - thx Dan
+   * Possible crash+bug in 'Fix common errors' on selected lines - thx Dan
    * Drag'n'drop of large bluray sup files - thx AT
+   * Minor fix in 'Fix common errors -> Fix invalid italic tags' - thx azu
 
 
 3.3.1 (3rd February 2013)
